assets/tailwind-compiled.css
/* ... */
.pointer-events-none {
    pointer-events: none
}

.visible {
    visibility: visible
}

.fixed {
    position: fixed
}

.absolute {
    position: absolute
}

.relative {
    position: relative
}

.sticky {
    position: sticky
}

.inset-0 {
    inset: 0px
}

.\!left-0 {
    left: 0px !important
}

.\!left-\[unset\] {
    left: unset !important
}

.\!right-0 {
    right: 0px !important
}

.\!right-16 {
    right: 64px !important
}

.\!right-4 {
    right: 16px !important
}

.\!top-6 {
    top: 24px !important
}

.-top-2\.5 {
    top: -10px
}

.-top-3 {
    top: -12px
}

.-top-4 {
    top: -16px
}

.-top-full {
    top: -100%
}

.bottom-0 {
    bottom: 0px
}

.bottom-1 {
    bottom: 4px
}

.left-0 {
    left: 0px
}

.left-1\/2 {
    left: 50%
}

.left-2 {
    left: 8px
}

.left-4 {
    left: 16px
}

.right-0 {
    right: 0px
}

.right-1 {
    right: 4px
}

.right-2 {
    right: 8px
}

.right-3 {
    right: 12px
}

.right-4 {
    right: 16px
}

.top-0 {
    top: 0px
}

.top-1\/2 {
    top: 50%
}

.top-3 {
    top: 12px
}

.isolate {
    isolation: isolate
}

.z-10 {
    z-index: 10
}

.order-1 {
    order: 1
}

.col-span-1 {
    grid-column: span 1 / span 1
}

.col-span-2 {
    grid-column: span 2 / span 2
}

.col-span-3 {
    grid-column: span 3 / span 3
}

.\!m-0 {
    margin: 0px !important
}

.m-0 {
    margin: 0px
}

.\!my-0 {
    margin-top: 0px !important;
    margin-bottom: 0px !important
}

.\!my-6 {
    margin-top: 24px !important;
    margin-bottom: 24px !important
}

.mx-2 {
    margin-left: 8px;
    margin-right: 8px
}

.mx-auto {
    margin-left: auto;
    margin-right: auto
}

.my-0 {
    margin-top: 0px;
    margin-bottom: 0px
}

.my-1 {
    margin-top: 4px;
    margin-bottom: 4px
}

.my-2 {
    margin-top: 8px;
    margin-bottom: 8px
}

.my-3 {
    margin-top: 12px;
    margin-bottom: 12px
}

.my-6 {
    margin-top: 24px;
    margin-bottom: 24px
}

.\!mb-0 {
    margin-bottom: 0px !important
}

.\!mb-12 {
    margin-bottom: 48px !important
}

.\!mb-3 {
    margin-bottom: 12px !important
}

.\!mb-4 {
    margin-bottom: 16px !important
}

.\!mb-6 {
    margin-bottom: 24px !important
}

.\!mt-6 {
    margin-top: 24px !important
}

.\!mt-8 {
    margin-top: 32px !important
}

.-mt-16 {
    margin-top: -64px
}

.-mt-4 {
    margin-top: -16px
}

.mb-0 {
    margin-bottom: 0px
}

.mb-1 {
    margin-bottom: 4px
}

.mb-10 {
    margin-bottom: 40px
}

.mb-12 {
    margin-bottom: 48px
}

.mb-2 {
    margin-bottom: 8px
}

.mb-3 {
    margin-bottom: 12px
}

.mb-4 {
    margin-bottom: 16px
}

.mb-5 {
    margin-bottom: 20px
}

.mb-6 {
    margin-bottom: 24px
}

.mb-8 {
    margin-bottom: 32px
}

.ml-1 {
    margin-left: 4px
}

.ml-2 {
    margin-left: 8px
}

.ml-auto {
    margin-left: auto
}

.mr-2 {
    margin-right: 8px
}

.mt-0 {
    margin-top: 0px
}

.mt-0\.5 {
    margin-top: 2px
}

.mt-10 {
    margin-top: 40px
}

.mt-12 {
    margin-top: 48px
}

.mt-2 {
    margin-top: 8px
}

.mt-3 {
    margin-top: 12px
}

.mt-4 {
    margin-top: 16px
}

.mt-5 {
    margin-top: 20px
}

.mt-6 {
    margin-top: 24px
}

.mt-8 {
    margin-top: 32px
}

.mt-auto {
    margin-top: auto
}

.mt-1 {
    margin-top: 4px
}

.line-clamp-1 {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1
}

.line-clamp-2 {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2
}

.line-clamp-3 {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3
}

.\!block {
    display: block !important
}

.block {
    display: block
}

.\!inline-block {
    display: inline-block !important
}

.inline-block {
    display: inline-block
}

.\!flex {
    display: flex !important
}

.flex {
    display: flex
}

.inline-flex {
    display: inline-flex
}

.table {
    display: table
}

.grid {
    display: grid
}

.contents {
    display: contents
}

.hidden {
    display: none
}

.aspect-square {
    aspect-ratio: 1 / 1
}

.\!size-7 {
    width: 28px !important;
    height: 28px !important
}

.size-10 {
    width: 40px;
    height: 40px
}

.size-12 {
    width: 48px;
    height: 48px
}

.size-14 {
    width: 56px;
    height: 56px
}

.size-3 {
    width: 12px;
    height: 12px
}

.size-4 {
    width: 16px;
    height: 16px
}

.size-5 {
    width: 20px;
    height: 20px
}

.size-6 {
    width: 24px;
    height: 24px
}

.size-8 {
    width: 32px;
    height: 32px
}

.size-\[60px\] {
    width: 60px;
    height: 60px
}

.\!h-10 {
    height: 40px !important
}

.h-10 {
    height: 40px
}

.h-24 {
    height: 96px
}

.h-3 {
    height: 12px
}

.h-5 {
    height: 20px
}

.h-6 {
    height: 24px
}

.h-7 {
    height: 28px
}

.h-8 {
    height: 32px
}

.h-\[8px\] {
    height: 8px
}

.h-auto {
    height: auto
}

.h-full {
    height: 100%
}

.h-px {
    height: 1px
}

.min-h-12 {
    min-height: 48px
}

.min-h-\[200px\] {
    min-height: 200px
}

.\!w-10 {
    width: 40px !important
}

.w-10 {
    width: 40px
}

.w-24 {
    width: 96px
}

.w-28 {
    width: 112px
}

.w-5 {
    width: 20px
}

.w-6 {
    width: 24px
}

.w-7 {
    width: 28px
}

.w-8 {
    width: 32px
}

.w-\[80px\] {
    width: 80px
}

.w-\[8px\] {
    width: 8px
}

.w-\[calc\(50\%-0\.5rem\)\] {
    width: calc(50% - 8px)
}

.w-auto {
    width: auto
}

.w-full {
    width: 100%
}

.min-w-0 {
    min-width: 0px
}

.max-w-2xl {
    max-width: 672px
}

.max-w-3xl {
    max-width: 768px
}

.max-w-4xl {
    max-width: 896px
}

.max-w-\[100px\] {
    max-width: 100px
}

.max-w-\[250px\] {
    max-width: 250px
}

.max-w-\[320px\] {
    max-width: 320px
}

.max-w-\[500px\] {
    max-width: 500px
}

.max-w-\[600px\] {
    max-width: 600px
}

.max-w-\[60px\] {
    max-width: 60px
}

.max-w-md {
    max-width: 448px
}

.max-w-screen-lg {
    max-width: 1024px
}

.max-w-screen-md {
    max-width: 768px
}

.max-w-xl {
    max-width: 576px
}

.flex-1 {
    flex: 1 1 0%
}

.flex-none {
    flex: none
}
/* ... */

